<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OfferDetailsActivity">
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/theme_color"
        android:indeterminateDrawable="@drawable/progress_bar_style"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--<com.facebook.shimmer.ShimmerFrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.facebook.shimmer.ShimmerFrameLayout>-->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp">

                <Button
                    android:id="@+id/share_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="18dp"
                    android:background="@drawable/round_shape"
                    android:padding="6dp"
                    android:text="@string/start_this_offer_now"

                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/payload_list"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/offer_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:text="Title"
                    android:textAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
                    android:textSize="22sp"
                    app:layout_constraintStart_toEndOf="@+id/image_cardView"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginLeft="20dp" />
                <TextView
                    android:id="@+id/offer_upto_amount_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upto"
                    android:textAppearance="@style/ShapeAppearance.MaterialComponents.MediumComponent"
                    android:layout_marginTop="2dp"
                    android:layout_marginStart="20dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/theme_color"
                    app:layout_constraintStart_toEndOf="@id/image_cardView"
                    app:layout_constraintTop_toBottomOf="@id/offer_title_tv"
                    android:layout_marginLeft="20dp" />

                <TextView
                    android:id="@+id/offer_des_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:maxHeight="200dp"
                    android:text="Description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_cardView"
                    app:layout_goneMarginTop="16dp" />

                <TextView
                    android:id="@+id/task_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:text="task"
                    android:textAlignment="textStart"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line1"
                    android:gravity="start" />

                <!--  <TextView
                      android:id="@+id/offer_rewards_tv"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="8dp"
                      android:text="00"
                      android:textSize="12sp"
                      android:textStyle="bold"
                      app:layout_constraintTop_toBottomOf="@id/steps_text"
                      app:layout_constraintEnd_toEndOf="parent" />-->

                <TextView
                    android:id="@+id/receive_rewards_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="100"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <!-- <TextView
                     android:id="@+id/step1_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
                     android:text="step 1"
                     android:textAllCaps="true"
                     android:textSize="12sp"
                     android:textStyle="bold"
                     app:layout_constraintTop_toBottomOf="@id/steps_text"
                     app:layout_constraintStart_toStartOf="parent" />

                 <TextView
                     android:id="@+id/step2_tv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
                     android:text="step 2"
                     android:visibility="gone"
                     android:textAllCaps="true"
                     android:textColor="@color/selected_tab_color"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
     -->
                <TextView
                    android:id="@+id/instructions_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/instructions"
                    android:textAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/line1" />

                <TextView
                    android:id="@+id/instructions_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/dummy_data"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/instructions_text" />

                <TextView
                    android:id="@+id/steps_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:text="@string/earning_steps"
                    android:textAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/instructions_tv" />
                <com.mindgeeks.offerwall.utils.MyListView
                    android:id="@+id/payload_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    tools:listitem="@layout/payload_item_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    android:scrollIndicators="none"
                    app:layout_constraintTop_toBottomOf="@id/steps_text"/>

                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="8dp"
                    android:background="#ADA7A7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/offer_des_tv" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/image_cardView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@color/theme_color"
                    android:elevation="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardMaxElevation="1dp"
                    app:cardUseCompatPadding="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/offer_app_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="app_image"
                         />

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>